...
            "state": "translated",
            "value": "Discard changes"
          }
        }
      }
    },
    "Änderungen verwerfen und schließen": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Discard changes and close"
          }
...
    },
    "Erfassen": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Capture"
          }
        }
      }
    },
    "Erkannter Bestand": {
      "localizations": {
...
    },
    "Galerie": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Gallery"
          }
        }
      }
    },
    "Galerie durchsuchen": {
      "localizations": {
...
    },
    "Neues Board": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "New board"
          }
        }
      }
    },
    "Nicht alle Tabellenblätter wurden geschrieben.": {
      "localizations": {
...
    },
    "Übersicht": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Overview"
          }
        }
      }
    },
    "Übersicht des exportierten Bestands": {
      "localizations": {
...
            "state": "translated",
            "value": "Continue…"
          }
        }
      }
    },
    "Weiter bearbeiten": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Keep editing"
          }
...
